[package]
name = "cerberus-srv"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
gflags = "0.3.8"
serde = "1.0.125"
serde_json = "1.0.64"
confy = "0.4.0"
futures = "0.3.16"
diesel = { version = "1.4.5", features = ["sqlite", "r2d2"] }
validator = { version = "0.14.0", features = ["derive"] }