[package]
name = "diesel-example"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
diesel = { version = "2", features = ["sqlite", "r2d2"] }
dotenv = "0.15"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
uuid = { version = "1", features = ["v4", "serde"] }
